# SegmentsDistance

./: CMakeLists.txt  README.md
src/: Geometry.h  Point3D.h  Segment3D.h  Vector3D.h
test/: main.cpp  testPoint3D.cpp  testPolymorphic.cpp  testSegmentDistance.cpp  testVector3D.cpp
